| Bug #21328 | mysqld issues warnings on ALTER CSV table to MyISAM | ||
|---|---|---|---|
| Submitted: | 28 Jul 2006 15:37 | Modified: | 24 Jan 2007 22:20 |
| Reporter: | Petr Chardin | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 5.1 | OS: | Linux (SUSE Linux 10.0) |
| Assigned to: | Bugs System | Target Version: | |
[28 Jul 2006 15:47]
Miguel Solorzano
Thank you for the bug report. Verified as described.
[3 Dec 2006 23:52]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/16359 ChangeSet@1.2390, 2006-12-04 03:07:44+03:00, petr@outpost.site +4 -0 Fix Bug #21328 mysqld issues warnings on ALTER CSV table to MyISAM
[4 Dec 2006 16:45]
Petr Chardin
pushed to 5.1-runtime
[15 Jan 2007 17:23]
Marc Alff
Merged into 5.1.15 The bug does not exist in 5.0
[24 Jan 2007 22:20]
Paul DuBois
Noted in 5.1.15 changelog.

Description: alter CSV table with NULLs to myisam results in warnings How to repeat: CREATE TABLE `null_bug` ( `col1` int(11) DEFAULT NULL, `col2` int(11) DEFAULT NULL, `col3` int(11) DEFAULT NULL ) ENGINE=CSV; insert into null_bug values (1,NULL,NULL); alter table null_bug engine=myisam; ====================================== Here how it looks: mysql> CREATE TABLE `null_bug` ( -> `col1` int(11) DEFAULT NULL, -> `col2` int(11) DEFAULT NULL, -> `col3` int(11) DEFAULT NULL -> ) ENGINE=CSV; Query OK, 0 rows affected (0.02 sec) mysql> insert into null_bug values (1,NULL,NULL); Query OK, 1 row affected (0.08 sec) mysql> select * from null_bug; +------+------+------+ | col1 | col2 | col3 | +------+------+------+ | 1 | 0 | 0 | +------+------+------+ 1 row in set (0.00 sec) mysql> alter table null_bug engine=myisam; Query OK, 1 row affected, 2 warnings (0.10 sec) Records: 1 Duplicates: 0 Warnings: 2 mysql> show warnings; +---------+------+-----------------------------------------------+ | Level | Code | Message | +---------+------+-----------------------------------------------+ | Warning | 1264 | Out of range value for column 'col2' at row 0 | | Warning | 1264 | Out of range value for column 'col3' at row 0 | +---------+------+-----------------------------------------------+ 2 rows in set (0.00 sec)